# barcode-constrained-phylogeny-backbone

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  resolve_polytomies.py
.github/workflows/: python-package.yml
doc/: process-flow.mermaid  project-doc.md  resolution-pruning.md
polytomy/: branch_optimizer.py  filter_alignment.py  opentol_client.py  pipeline.py  polytomy_finder.py  polytomy_resolver.py  sequence_placer.py  tree_alignment_matcher.py  tree_parser.py
polytomy/test_scripts/: empty_node_fix.py  filter_alignment.py  fix_truncated_tree.py  newick_bracket_fix.py  newick_fix.py  tree_cleanup.py
src/: classes.py
tests/: test_branch_optimizer.py  test_opentol_client.py  test_polytomy_finder.py  test_polytomy_resolver.py  test_sequence_placer.py  test_tree_parser.py
tests/data/: README.md  example_alignment.fa  example_tree.tre  example_tree_epa.tre  example_tree_iqtree_optimized.tre  example_tree_resolved.tre  exemplars_table.txt  final_tree_optimized.tre  first_exemplars.fa  grafted_exemplars.fa  outfile-labels-internals-resolved.tre  outfile-labels-internals.tre  output_in_tree.fasta  output_not_in_tree.fasta  poly_resolved_common.tre  seqplacer.py
